# Pagination

./: README.md  docker-compose.yml  manage.py  pyproject.toml
paignation/: asgi.py  settings.py  urls.py  wsgi.py
post/: factories.py  models.py
post/management/commands/: seed_post.py
post/migrations/: 0001_initial.py  0002_alter_post_options.py
tests/: test_post.py
